               apt-get compatible syntax ("aptitude install
               gnome-desktop^").

  * [cmdline]: Do not assume that APT::Default-Release always provides
               the candidate version of a package, instead use the
               policy defined by apt_preferences(5).
               (Closes: #587775, #631464, #686316)

- Documentation:

  * Update for default value of APT::AutoRemove::SuggestsImportant
    which is "true" since apt 0.8.15.3. (Closes: #685310)

  * Correctly reference APT::AutoRemove::RecommendsImportant and
    SuggestsImportant which do not contain any hyphens.
    (Closes: #579071)

- Translation updates:

  * Czech (Closes: #681693)
  * French (Closes: #680040, #685084)
  * Polish (Closes: #678153)
  * Russian (Closes: #686016)
  * Spanish (Closes: #686752)

[8/25/2012]
Version 0.6.8.1                             "Don hat"

- Crashes and serious errors:

  * Multi-arch update for the problem resolver:
    - handle conflicts without removing all foreign-arch
      packages (Closes: #672340) (LP: #831768)
    - correctly recognise dependencies solved by Multi-Arch:
      foreign packages (LP: #968412)

- Minor bugs:

  * [curses]: Use dpkg package names when calling dpkg
              (Closes: #680333)

- Internal changes:

  * Add (temporary) helpers for interacting with dpkg.

[5/11/2012]
Version 0.6.8                               "Never need a reason,
                                             never need a rhyme"

This version of aptitude requires apt 0.9 and will not build against
earlier releases.

- Crashes and serious errors:

  * [all]: Fix build with g++ 4.7
           Thanks Adrian Lang for the patch (Closes: #672335)

- New features:

  * [all]: Support really big files in the download system

           This follows recent changes in apt which added support for
           files greater than several gigabytes in size -- using the
           'unsigned long long' type to store the file size.
