@@ -12,6 +12,11 @@ Version 0.6.8.2                             "Say 'what' again"
                policy defined by apt_preferences(5).
                (Closes: #587775, #631464, #686316)
 
+  * [all]: Download changelogs from APT::Changelogs::Server instead
+           of a fixed location, and replace very ancient and disused
+           option for Aptitude::Changelog-URL-Template.
+           (Closes: #687239)
+
 - Documentation:
 
   * Update for default value of APT::AutoRemove::SuggestsImportant
